--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue-loader": "^15.9.2"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
